tests/compiler/logicalNotExpression1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/logicalNotExpression1.ts`, Apache-2.0 License

!foo;
//~^ ERROR: Cannot find name 'foo'.